fix for logos on firefox

--- a/cms/compass/sass/partials/_big-screens-only.scss
+++ b/cms/compass/sass/partials/_big-screens-only.scss
@@ -178,4 +178,8 @@
     padding-left: 10px;
     width: initial;
   }
+
+  .mobile-seal {
+    display: none;
+  }
 }
